<resources>
    <string name="Category">Category</string>
    <string name="Hot">Recommendations</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_display">Display</string>
    <string name="action_display_grid">Grid</string>
    <string name="action_display_list">List</string>
    <string name="action_favourite">favourite</string>
    <string name="action_save">Save</string>
    <string name="action_save_add">Save more</string>
    <string name="action_settings">Settings</string>
    <string name="action_sort">Sort</string>
    <string name="action_thumbnails">Thumbnails</string>
    <string name="action_unfavourite">Cancle favourite</string>
    <string name="add_account">Add Account</string>
    <string name="agree">Agree</string>
    <string name="all">All Series</string>
    <string name="ana_api_key">057ab817bc72211a6e2b2525c12d39c1e55b2e</string>
    <string name="app_name">Manga Geek</string>
    <string name="app_slogen">The best manga application.</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applovin_list_item_image_description">Displays more info about the list item.</string>
    <string name="backup">Backup</string>
    <string name="backup_failed">Backup data failed.</string>
    <string name="backup_success">Backup data success.</string>
    <string name="block_ad">Block ad</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="brightness">brightness</string>
    <string name="brvah_app_name">Library</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="cancel">cancel</string>
    <string name="chapters">Chapters</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="choose_premium_plan">Choose your Premium plan</string>
    <string name="clean_wallpaper">Clean Wallpaper</string>
    <string name="click_left_region_of">Touch left region of screen</string>
    <string name="click_right_region_of">Touch right region of screen</string>
    <string name="click_to_scroll">Scroll by touch screen</string>
    <string name="click_to_set_your_wallpaper">Click to set your wallpaper</string>
    <string name="click_to_switch_source">Click to switch provider of manga</string>
    <string name="close">Close</string>
    <string name="comic_chapter">Chapter %1$d</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_settings">General</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm">confirm</string>
    <string name="confirm_to_delete">Confirm to delete ?</string>
    <string name="crop_big_image">Crop big image</string>
    <string name="crop_failed">Crop failed</string>
    <string name="custom_failed">Custom failed</string>
    <string name="custom_head">Select image</string>
    <string name="custom_storage_path">Custom storage path</string>
    <string name="custom_theme_color">Choose color</string>
    <string name="default_desc">There is no description.</string>
    <string name="default_web_client_id">716213927298-68b1jqn61j7mvgnlo1rubh9vjmafpdqf.apps.googleusercontent.com</string>
    <string name="delete_success">Delete success.</string>
    <string name="disagree">Disagree</string>
    <string name="double_click_to_exit">Please back again to exit app.</string>
    <string name="download">Download</string>
    <string name="download_action_confirm">Launch or pause?</string>
    <string name="download_ask_stop">Firstly,Please pause all tasks</string>
    <string name="download_delete_confirm">Delete or not?</string>
    <string name="download_service_complete">All task completed</string>
    <string name="download_service_doing">Manga is downloading</string>
    <string name="download_start_success">All tasks are going to download</string>
    <string name="download_stop_success">All tasks are paused</string>
    <string name="download_task_empty">No download task</string>
    <string name="download_task_fail">Load task failed</string>
    <string name="energy_saving">Energy saving</string>
    <string name="enjoy_a_better_experience_without_ads">Enjoy a better experience without Ads!</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="favourite_success">Add to favourites</string>
    <string name="favourites">Favourites</string>
    <string name="feedback">Feedback</string>
    <string name="guide_gallery_left">Page turning</string>
    <string name="guide_gallery_menu">Menu</string>
    <string name="guide_gallery_progress">Progress</string>
    <string name="guide_gallery_right">Page turning</string>
    <string name="history">History</string>
    <string name="join_premium_play">Join our Premium membership now!</string>
    <string name="latest_updates">Latest updates</string>
    <string name="like_our_facebook_page">Like our Facebook Page</string>
    <string name="load_next_chapter">Load next chapter</string>
    <string name="load_pre_chapter">Load previous chapter</string>
    <string name="menu_download">Local storage</string>
    <string name="menu_others">Others</string>
    <string name="menu_share">Share</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="quick_control">Wallpaper quick control</string>
    <string name="reading_mode">Reading mode</string>
    <string name="report">Report</string>
    <string name="restore">Restore</string>
    <string name="rotation">Rotation</string>
    <string name="screen_rotation">Screen rotation</string>
    <string name="scroll_by_click">Scroll set</string>
    <string name="scroll_by_volume_keys">Scroll by volume keys</string>
    <string name="select_read_mode">Select reading mode</string>
    <string name="select_reading_direction">Select reading direction</string>
    <string name="select_screen_rotation">Select screen rotation</string>
    <string name="settings">Settings</string>
    <string name="settings_read">Reading options</string>
    <string name="settings_read_reading_direction">Reading direction</string>
    <string name="settings_read_screen_rotation">Screen rotation</string>
    <string name="show_page_margin">Show page margin</string>
    <string name="sort">Sort</string>
    <string name="tap_screen_to_control_voice">Fast Tap screen twice to control voice</string>
    <string name="term_of_use">Term of use</string>
    <string name="theme_color">Theme color</string>
    <string name="use_custom_brightness">Use custom brightness</string>
    <string name="video_voice">"Live wallpaper's voice"</string>
    <string name="visit_our_website">Visit our Website</string>
    <string name="voice">on</string>
    <string name="voice_off">off</string>
    <string name="when_first_page">When first page</string>
    <string name="when_lastest_page">When last page</string>
</resources>