<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:id="@id/content" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
          xmlns:android="http://schemas.android.com/apk/res/android">
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:id="@id/icon" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_margin="8.0dip" android:src="@drawable/ic_add" />
                <TextView android:textSize="16.0sp" android:id="@id/display_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="4.0dip" android:text="Eric" android:layout_toRightOf="@id/icon" android:layout_alignTop="@id/icon" />
                <TextView android:id="@id/provider" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:text="Facebook" android:layout_toRightOf="@id/icon" android:layout_below="@id/display_name" android:layout_alignBottom="@id/icon" />
                <ProgressBar android:id="@id/progress" android:visibility="gone" android:layout_width="36.0dip" android:layout_height="36.0dip" android:layout_margin="12.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <View android:background="@color/black_15" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <androidx.appcompat.widget.SwitchCompat android:id="@id/favorite" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:checked="false" android:text="@string/favourites" />
            <View android:background="@color/black_15" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <androidx.appcompat.widget.SwitchCompat android:id="@id/history" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:checked="false" android:text="@string/history" />
            <View android:background="@color/black_15" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <Button android:textSize="16.0sp" android:textColor="@color/white" android:id="@id/backup" android:background="@drawable/round_corner" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:text="@string/backup" />
            <Button android:textSize="16.0sp" android:textColor="@color/white" android:id="@id/restoring" android:background="@drawable/round_corner" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:text="@string/restore" />
        </LinearLayout>
    </FrameLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton android:layout_gravity="end|bottom|center" android:id="@id/fab" android:background="@color/colorPrimary" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/fab_margin" app:elevation="2.0dip" app:layout_behavior="com.manga.geek.afo.studio.ui.customview.ScrollAwareFABBehavior" app:srcCompat="@drawable/ic_logout" />
    <com.google.android.material.appbar.AppBarLayout android:theme="@style/AppTheme.AppBarOverlay" android:id="@id/appbar" android:layout_width="fill_parent" android:layout_height="wrap_content" app:elevation="4.0dip">
        <androidx.appcompat.widget.Toolbar android:id="@id/toolbar" android:background="?colorPrimary" android:layout_width="fill_parent" android:layout_height="?actionBarSize" app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>