<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:id="@id/top" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:background="@drawable/plan_top_bg_co" android:layout_width="fill_parent" android:layout_height="wrap_content" android:scaleType="centerCrop" />
        <LinearLayout android:layout_gravity="bottom" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip">
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/white" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/join_premium_play" />
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/white" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/choose_premium_plan" />
        </LinearLayout>
    </FrameLayout>
    <RelativeLayout android:id="@id/free_trial" android:background="@drawable/plan_chose_button_bg_1" android:layout_width="270.0dip" android:layout_height="74.0dip" android:layout_marginTop="80.0dip" android:layout_below="@id/top" android:layout_centerInParent="true">
        <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="3 days free trial" android:layout_centerInParent="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:background="@color/white" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_below="@id/free_trial">
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/black" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Premium Benefits" />
        <TextView android:textColor="@color/black_87" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Unlimited premium Live wallpapers" />
        <TextView android:textColor="@color/black_87" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Enjoy a better manga reading experience without Ads!" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <TextView android:textSize="12.0sp" android:gravity="center" android:layout_gravity="center" android:id="@id/privacy_policy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:text="@string/privacy_policy" />
        <TextView android:textSize="12.0sp" android:gravity="center" android:layout_gravity="center" android:id="@id/term_of_use" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:text="@string/term_of_use" />
    </LinearLayout>
</RelativeLayout>