<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:layout_gravity="top" android:orientation="horizontal" android:id="@id/menu_top" android:background="@color/transparent_dark" android:visibility="invisible" android:clickable="true" android:layout_width="fill_parent" android:layout_height="@dimen/toolbutton_size">
        <ImageView android:id="@android:id/home" android:background="?selectableItemBackground" android:layout_width="wrap_content" android:layout_height="fill_parent" android:scaleType="center" android:minWidth="@dimen/toolbutton_size" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:contentDescription="@string/close" app:srcCompat="@drawable/ic_arrow_back_white_24dp" />
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:textColor="@android:color/white" android:ellipsize="end" android:id="@android:id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginTop="4.0dip" android:layout_marginRight="40.0dip" android:lines="1" android:layout_toRightOf="@android:id/home" />
        <com.manga.geek.afo.studio.ui.customview.AppCompatProgressBar android:id="@id/progressBar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginRight="4.0dip" android:layout_marginBottom="4.0dip" android:max="100" android:progress="100" android:layout_toLeftOf="@id/clock" android:layout_toRightOf="@android:id/home" android:layout_alignParentBottom="true" style="?android:progressBarStyleHorizontal" />
        <com.manga.geek.afo.studio.ui.customview.MiniClockText android:textSize="12.0sp" android:textColor="@color/white" android:id="@id/clock" android:paddingLeft="4.0dip" android:paddingRight="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginTop="4.0dip" android:layout_marginRight="4.0dip" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <LinearLayout android:layout_gravity="bottom" android:orientation="horizontal" android:id="@id/menu_bottom" android:background="@color/transparent_dark" android:visibility="invisible" android:clickable="true" android:layout_width="fill_parent" android:layout_height="@dimen/toolbutton_size">
        <ImageView android:id="@id/menuitem_unfavourite" android:background="?selectableItemBackground" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="center" android:layout_weight="1.0" android:contentDescription="@string/action_unfavourite" app:srcCompat="@drawable/ic_favorite_light" />
        <ImageView android:id="@id/menuitem_rotation" android:background="?selectableItemBackground" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="center" android:layout_weight="1.0" android:contentDescription="@string/screen_rotation" app:srcCompat="@drawable/ic_screen_rotation_white" />
        <ImageView android:id="@id/menuitem_change_quality" android:background="?selectableItemBackground" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="center" android:layout_weight="1.0" android:contentDescription="change quality" app:srcCompat="@drawable/ic_switch" />
        <ImageView android:id="@id/menuitem_settings" android:background="?selectableItemBackground" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="center" android:layout_weight="1.0" android:contentDescription="@string/action_settings" app:srcCompat="@drawable/ic_preferences_light" />
    </LinearLayout>
</FrameLayout>